--- a/src/app/task-scheduler/task-scheduler/task-scheduler.component.html
+++ b/src/app/task-scheduler/task-scheduler/task-scheduler.component.html
@@ -36,7 +36,7 @@
     <mat-card-actions>
       <div class="button-row">
         <button mat-raised-button color="primary" (click)="addTask()">
-          Let's add it to the agenda!
+          Let's add it to the agenda for today!
         </button>
       </div>
     </mat-card-actions>
@@ -49,7 +49,6 @@
     <mat-card-content class="contents_tasks">
       <mat-list>
         <mat-divider></mat-divider>
-
         <ng-container *ngFor="let task of tasks$ | async as tasks">
           <mat-list-item class="task-item">
             <ng-container
@@ -77,7 +76,7 @@
             </ng-container>
             <ng-template #displayTask>
               <span class="task-text">
-                {{ task.title }} - {{ task.date | date : "dd.MM.yyyy" }}
+                {{ task.title }} - {{ task.date | date: "dd.MM.yyyy" }}
               </span>
               <button
                 mat-raised-button
